add paili to plugin and finished the pipeline
